fixed some keys

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
@@ -39,7 +39,7 @@
 				<jsp:attribute name="crumbs">
 					<nav:account />
 					<nav:crumb nameKey="navi.settings" active="true" />
-					<nav:crumb nameKey="navi.groupsettings" active="true" />
+					<nav:crumb nameKey="navi.group" active="true" />
 				</jsp:attribute>
 			</nav:breadcrumbs>
 		</jsp:attribute>
