--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/home.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/home.jspx
@@ -50,7 +50,7 @@
 						</c:otherwise>
 					</c:choose>
 				</c:when>
-				<c:when test="${command.context.userLoggedIn and properties['project.theme'] ne 'puma')}">
+				<c:when test="${command.context.userLoggedIn and properties['project.theme'] ne 'puma'}">
 					<div id="overlayInfobox">
 						<!-- FIXME: add theme! ??-->
 						<div class="close"><a onclick="$('#overlayInfobox').hide();"><fmt:message key="box.close"/></a></div>
