Homepage error fixed. Tooltip on hover added.

--- a/bibsonomy-webapp/src/main/webapp/resources/css/BatchEdit.css
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/BatchEdit.css
@@ -1,232 +1,14 @@
-.content li{
-    list-style-type: circle;
-    position:relative;
-    left:20px;
+.batchInfo>div{
+	display:none;
 }
-.Hint{
+.batchInfo:hover>div{
 	display: block;
-	font-weight:bold;
-    padding:10px;
-	color: black;
-	font-size: 120%;
-	text-decoration:none;
-	text-align: left;
-	width: 50%;
 	position: absolute;
-	    
-}
-.Hint li{
-	display:inline-block;
-}
-.Hint a{
-    text-decoration:underline;
-    margin-right: 2px;
-    margin-left: 2px;
-    width: 10px;
-}
-.red{
-	border: 1px solid #FF9999;
-	background-color: #FF9999;
-}
-.green{
-	border: 1px solid #99FF99;
-	background-color: #99FF99;
-}
-
-.invisible{
-	visibility: hidden;
-}
-.applyBtn{
-	display:block;
-    border: 1px solid #c6c6c6;
-    font-weight:bold;
-    color:black;       
-    white-space:nowrap;
-    background-color:#eee;
-    text-decoration:none;
-    cursor: pointer; cursor: hand;
-    float:left;  
-}
-.applyBtn:hover{
-	border: 2px solid #c6c6c6;
-}
-#nav{
-    list-style:none;
-    font-weight:bold;
-    width:45%;
-   /* margin: 0 auto;*/
-   /* left:10px;
-    position:relative;
-    padding:0;
-   padding-left: 35px;*/
-   
-   
-    z-index:5;
-}
-#nav li{
-    display: table-cell;
-    
-/*    position:relative;*/
-}
-#nav a{
-    display:block;
-    border: 1px solid #c6c6c6;       
-    padding:8px;
-    background-color:#eee;
-    color:transparent;
-    text-decoration:none;
-    margin-right: 2px;
-    margin-left: 2px;
-    
-}
-#nav ul li{
-	float: none; 
-/*	position: relative;*/
-    padding-top:1px;
-    display:block;
-    
-}
-#nav li ul{
-	position: absolute;
-    left:-9999px;
-    
-}
-
-#nav ul a{
-    white-space:nowrap;
-    color:black; 
-}
-
-#nav li:hover ul a{ 
-    text-decoration:none;
-}
-#nav li:hover ul li a:hover{
-    background:#333;
-    color:white;
-}
-
-
-.postList li{
-	display: table-cell;  
-	margin: 5px; 
-	padding: 5px; 
-	vertical-align: top; 
-	position:relative; 
-	
-}
-
-.delClass{
-	background-image: url(/resources/image/post_actions.png);
-	background-position:8px 1233px;
-	width:20px;
-	
-}
-.delClass:hover{
-    background-image: url(/resources/image/post_actions.png);
-	background-position:8px 1272px
-}
-
-.delClassDisabled{
-	background-image: url(/resources/image/post_actions.png);
-	background-position:8px 1311px;
-	width:20px;
-	
-}
-.privacyClass{
-	background-image: url(/resources/image/viewable_inactive.png);
-	background-repeat: no-repeat;
-	background-position:center;;
-	width:20px;
-}
-.privacyClass:hover{
-    background-image: url(/resources/image/mobile/viewable.png);
-	background-repeat: no-repeat;
-	background-position:center;
-}
-
-.privacyClassDisabled{
-    background-image: url(/resources/image/viewable_inactive.png);
-	background-repeat: no-repeat;
-	background-position:center;;
-	width:20px;
-}
-
-.normClass{
-	background-image: url(/resources/image/normalize_btn.png);
-	background-position:4px 97px;
-	width:20px;	
-}
-.normClass:hover{
-    background-image: url(/resources/image/normalize_btn.png) ;
-    background-position:4px 54px;
-	width:20px;	
-	
-}
-.normClassDisabled{
-	background-image: url(/resources/image/normalize_btn.png);
-	background-position:4px 137px;
-	width:20px;	
-}
-
-
-.tagEachClassDisabled{
-	background-image: url(/resources/image/editEachTag.png);
-	background-position:0px 156px;
-	width:20px;	
-}
-.tagEachClass{
-	background-image: url(/resources/image/editEachTag.png);
-	background-position:0px 63px;
-	width:20px;
-}
-.tagEachClass:hover{
-    background-image: url(/resources/image/editEachTag.png);
-	background-position:0px 110px
-}
-
-.tagAllClassDisabled{
-	background-image: url(/resources/image/add_Tag.png);
-	background-position:0px 155px;
-	width:20px;	
-}
-.tagAllClass{
-	background-image: url(/resources/image/add_Tag.png);
-	background-position:0px 105px;
-	width:20px;
-}
-.tagAllClass:hover{
-    background-image: url(/resources/image/add_Tag.png);
-	background-position:0px 49px
-}
-.kiste {
-	width:15%;
-   /* margin: 0 auto;
-    position:relative;
-   /* border-bottom: 1px solid #ccc;
-	border-top: 1px solid #ccc;
-	clear: left;*/
-	padding-left: 35px;
-}
-.postDesc{
-	font-size: 90%;
-	width: 100%;
-	white-space:nowrap;
-}
-
-.postDescDisable{
-	font-size: 90%;
-	width: 100%;
-	white-space:nowrap;
-	color: #808080;
-}
-
-.header{
-	background-color: #eee; 
-	text-align: center;
-	font-weight:bold;
-	border: 1px solid #ccc;
-	
-}
-.selectedButton{
-	background-color:#6666CC;
+	top: 3em+5px;
+	border: 1px solid #b5b5b5;
+	background-color: #fff;
+	color: #000;
+	padding: 5px;
+	white-space: normal;
+	z-index: 25;
 }
