--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -59,4 +59,5 @@
 /** BOOTSTRAP DISCUSSION LAYOUT */
 @import "bootstrap-discussion.less";
 
-@import "BatchEdit_bs.css";
+/** Batchedit page info Box on mouseover*/
+@import "BatchEdit.css";
