includes tagsinput js extension for bootstrap and related less file

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -42,7 +42,7 @@
 @small-font-size: 12px;
 
 /** currently not used */
-/* @import "bootstrap-tagsinput.less"; */
+@import "bootstrap-tagsinput.less";
 
 /** DATE PICKER */
 @import "bootstrap-datepicker.less";
