--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-tagsinput.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-tagsinput.less
@@ -9,7 +9,8 @@
   vertical-align: middle;
   border-radius: 4px;
   max-width: 100%;
-  line-height: 22px; 
+  line-height: 22px;
+  cursor: text;
 
   input {
     border: none;
@@ -28,6 +29,7 @@
   }
 
   .tag {
+    font-size: 12px;
     margin-right: 2px;
     color: white;
 
