--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/tag.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/tag.jspx
@@ -5,6 +5,7 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
+	xmlns:sidebar="urn:jsptagdir:/WEB-INF/tags/bstags/layout/sidebar"
 	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
 	xmlns:users="urn:jsptagdir:/WEB-INF/tags/bstags/users"
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
@@ -66,15 +67,23 @@
 			<!-- related tags -->
 			<c:if test="${not empty command.relatedTagCommand.relatedTags}">
 				<li>
-					<span class="sidebar_h"><a href="${helpLink}"><fmt:message key="relatedtags"/></a></span>
+					<sidebar:sidebarHeader>
+						<jsp:attribute name="text">
+							<fmt:message key="relatedtags"/>&#160;<a href="${helpLink}"><span class="fa fa-question-circle"><!--  --></span></a>
+						</jsp:attribute>
+					</sidebar:sidebarHeader>
 					<tags:related requPath="${requPath}" cmd="${command.relatedTagCommand}" order="${command.order}"/>
 				</li>
 			</c:if>
 			
-			<!-- related tags -->
+			<!-- similar tags -->
 			<c:if test="${not empty command.similarTags.relatedTags}">
 				<li>
-					<span class="sidebar_h"><a href="${helpLink}"><fmt:message key="similartags"/></a></span>
+					<sidebar:sidebarHeader>
+						<jsp:attribute name="text">
+							<fmt:message key="similartags"/>&#160;<a href="${helpLink}"><span class="fa fa-question-circle"><!--  --></span></a>
+						</jsp:attribute>
+					</sidebar:sidebarHeader>
 					<tags:similar requPath="${requPath}" cmd="${command.similarTags}"/>
 				</li>
 			</c:if>			
@@ -82,7 +91,7 @@
 			<!-- related users -->
 			<c:if test="${not empty command.relatedUserCommand.relatedUsers}">
 				<li>
-					<span class="sidebar_h"><fmt:message key="relatedusers"/></span>
+					<h4 class="sidebar"><fmt:message key="relatedusers"/></h4>
 					<users:related cmd="${command.relatedUserCommand}" userSimilarity="folkrank" displayFollowLink="${false}"/>
 				</li>			
 			</c:if>
