--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtexdetails.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/bibtexdetails.jspx
@@ -38,6 +38,7 @@
 		<jsp:attribute name="headerExt">
 			<script type="text/javascript" src="${resdir}/javascript/bs/publicationdetails.js"><!-- keep me --></script>
 			<script type="text/javascript" src="${resdir}/javascript/bs/publication.js"><!-- keep me --></script>
+			<script type="text/javascript" src="${resdir}/javascript/bs/additionalUrl.js"><!-- keep me --></script>
 		</jsp:attribute>
 		
 		<jsp:attribute name="breadcrumbs">
